Commit se agrego trabajo del vsc

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Servicio Rest para Autos</h1>
 <a href="/new-car.html">Nuevo Auto</a>
+<a href="/Pagina_web/index.html">pagina principal</a>
 <table id="cars">
     <tr>
         <th>ID</th>
