--- a/src/main/resources/public/Pagina_web/indeex.html
+++ b/src/main/resources/public/Pagina_web/indeex.html
@@ -15,7 +15,7 @@ index.html
     <div class="head">
 
         <div class="logo">
-            <a href="#">Bienvenido</a>
+            <a href="#">YOUPHONEWEB</a>
         </div>
 
         <nav class="navbar">
@@ -43,7 +43,7 @@ index.html
     <section class="content sau">
 
         <h2 class="title">¿Que tipo de productos buscas?</h2>
-        <p>Aca encontraras 3 tipos de procesadores, el cuales son....
+        <p>Aca encontraras 3 tipos de procesadores, los cuales son....
         <div class="box-container">
 
             <div class="box">
